--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "date-fns-timezone": "^0.1.4",
+    "date-fns-tz": "^3.1.3",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
